fixes #33, or at least most of it's parts, including refreshing of multiselect when loading new file, link between concept and wordlist fields, four items at least per alignments, etc., also modified css for slightly improved styling

--- a/css/bs-excerpt.css
+++ b/css/bs-excerpt.css
@@ -48,10 +48,8 @@
   font-size: 12px;
   clear: both;
   position:absolute;
-  top: 100%;
   left: inherit;
   max-width:350px;
-  z-index: 2500;
 }
 .multisect {
   padding: 15px;
